force-app/main/default/objects/BLN_DataCollectAnswer__c/BLN_DataCollectAnswer__c.object-meta.xml
<CustomObject>
    <description>FOUK-8278 This is used store Answers of data collect records</description>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>