force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_AccountTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountTypeFormula__c</fullName>
    <formula>TEXT(BLN_Question__r.BLN_Account__r.BLN_ClientType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>