force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_Answer__c.field-meta.xml
<CustomField>
    <fullName>BLN_Answer__c</fullName>
    <description>FOUK-8278 This is used in BLN_DataCollectorContainer LWC</description>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>