force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_AnswerStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_AnswerStatus__c</fullName>
    <formula>IMAGE( 
 IF( IsAnswerNull__c = TRUE , &quot;/img/samples/flag_red.gif&quot;,&quot;/img/samples/flag_green.gif&quot; ) ,&quot;status color&quot;

)</formula>
    <label>Answer Status</label>
    <type>Text</type>
</CustomField>