force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_Case__c.field-meta.xml
<CustomField>
    <fullName>BLN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-8278 This is used in bLN_DataCollectorContainer</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>