force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_LegacyAnswersId__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyAnswersId__c</fullName>
    <description>R2DM-290 - Created for data migration.</description>
    <externalId>true</externalId>
    <label>Legacy Answers Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>