force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyCreatedDate__c</fullName>
    <description>R2DM-290 - Created for data migration.</description>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>