force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_MigratedData__c.field-meta.xml
<CustomField>
    <fullName>BLN_MigratedData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R2DM-290 - Created for data migration</description>
    <label>Migrated Data</label>
    <type>Checkbox</type>
</CustomField>