force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_Question__c.field-meta.xml
<CustomField>
    <fullName>BLN_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-8278 This is used in bLN_DataCollectorContainer</description>
    <label>Question</label>
    <referenceTo>BLN_AccountRuleParameter__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>