force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_QuestionText__c.field-meta.xml
<CustomField>
    <fullName>BLN_QuestionText__c</fullName>
    <description>Created for Demo</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>