force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/BLN_QuestionType__c.field-meta.xml
<CustomField>
    <fullName>BLN_QuestionType__c</fullName>
    <formula>TEXT(BLN_Question__r.BLN_Mandatory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mandatory</label>
    <type>Text</type>
</CustomField>