force-app/main/default/objects/BLN_DataCollectAnswer__c/fields/IsAnswerNull__c.field-meta.xml
<CustomField>
    <fullName>IsAnswerNull__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Created for demo</description>
    <label>IsAnswerNull</label>
    <type>Checkbox</type>
</CustomField>