force-app/main/default/objects/BLN_DataCollectAnswer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BLN_Case__c</columns>
    <columns>BLN_Answer__c</columns>
    <columns>BLN_Question__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>